--- a/src/app/components/games/xines-speech/xines-speech.component.html
+++ b/src/app/components/games/xines-speech/xines-speech.component.html
@@ -21,6 +21,7 @@
       <div class="catala">{{paraules[random].catala}}</div>
       {{paraules[random].comentari}}
     </div>
+    <app-frases [paraula]="paraules[random]"></app-frases>
     <button class="resposta btn btn-primary" (click)="next()">Següent</button>
   </div>
 
@@ -38,6 +39,7 @@
         {{paraula.comentari}}
       </div>
     </div>
+    <app-frases [paraula]="paraules[random]"></app-frases>
     <button class="resposta btn btn-primary" (click)="next()">Següent</button>
   </div>
 </div>
