--- a/src/app/components/words/list-words/word-list.component.html
+++ b/src/app/components/words/list-words/word-list.component.html
@@ -7,7 +7,7 @@
                         type="text"
                         class="form-control"
                         placeholder="Cercar paraules"
-                        [(ngModel)]="title"
+                        [(ngModel)]="searchText"
                 />
                 <div class="input-group-append">
                     <input class="btn btn-outline-secondary" type="submit" value="Cercar" (click)="searchTitle()">
