--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -1,27 +1,68 @@
 <br>
 <div class="container list">
   <br><h1 class="title">Llistat de tags</h1><br>
-  <input type="text" [(ngModel)]="searchText" placeholder="Buscar" class="form-control">
-  <br>
-  <table class="table">
-      <thead class="table-dark">
-          <tr>
-              <th scope="col">Nom</th>
-              <th scope="col">Descripció</th>
-              <th>Accions</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor="let tag of list| searchFilter : searchText  | paginate: config">
-              <td class="caracters">{{tag.name}}</td>
-              <td class="pinyin">{{tag.description}}</td>
-              <td>
-                  <button class="btn btn-primary" [routerLink]="['/tag/words/', tag.id]"><a class="button">paraules </a><i class="bi bi-list"></i></button>
-                  <button class="btn btn-warning" [routerLink]="['/tag/edit',tag.id]" routerLinkActive="router-link-active" ><a class="button">Editar </a><i class="bi bi-pencil-fill"></i>                  </button>
-                  <button class="btn btn-danger" (click)="eliminar(tag.id)"><a class="button">Eliminar </a><i class="bi bi-trash"></i></button>
-              </td>
-          </tr>
-      </tbody>
-  </table>
-  <pagination-controls (pageChange)="pageChange($event)" class="my-pagination"></pagination-controls>
+    <div class="col-md-12">
+        <div class="input-group mb-3">
+            <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Cercar paraules"
+                    [(ngModel)]="searchText"
+            />
+            <div class="input-group-append">
+                <input class="btn btn-outline-secondary" type="submit" value="Cercar" (click)="searchTitle()">
+            </div>
+        </div>
+    </div>
+
+    <div>
+        {{count}} paraules trobades<br><br>
+    </div>
+
+    <table class="table">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">Nom</th>
+            <th scope="col">Descripció</th>
+            <th>Accions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="
+          let item of tags | paginate : {
+                  itemsPerPage: pageSize,
+                  currentPage: page,
+                  totalItems: count
+                };
+          let i = index">
+            <td class="caracters">{{item.name}}</td>
+            <td class="pinyin">{{item.description}}</td>
+            <td>
+                <button class="btn btn-primary" [routerLink]="['/tag/words/', item.id]"><a class="button">paraules </a><i class="bi bi-list"></i></button>
+                <button class="btn btn-warning" [routerLink]="['/tag/edit',item.id]" routerLinkActive="router-link-active" ><a class="button">Editar </a><i class="bi bi-pencil-fill"></i>                  </button>
+                <button class="btn btn-danger" (click)="eliminar(item.id)"><a class="button">Eliminar </a><i class="bi bi-trash"></i></button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+
+
+    <div class="col-md-12">
+        <pagination-controls
+                previousLabel="Anterior"
+                nextLabel="Següent"
+                [responsive]="true"
+                (pageChange)="handlePageChange($event)"
+        ></pagination-controls>
+    </div>
+
+    <div class="mt-3">
+        Nombre de resultats per pàgina:
+        <select (change)="handlePageSizeChange($event)">
+            <option *ngFor="let size of pageSizes" [ngValue]="size">
+                {{ size }}
+            </option>
+        </select>
+    </div>
 </div>
